WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133198
SVG TextRuns do not always get RenderingContexts
https://bugs.webkit.org/show_bug.cgi?id=133198
Summary
SVG TextRuns do not always get RenderingContexts
Myles C. Maxfield
Reported
2014-05-22 19:40:09 PDT
SVG TextRuns do not always get RenderingContexts
Attachments
Patch
(41.83 KB, patch)
2014-05-22 19:41 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(10.15 KB, patch)
2014-05-27 13:13 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(134.73 KB, patch)
2014-06-03 17:39 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(126.28 KB, patch)
2014-06-03 18:52 PDT
,
Myles C. Maxfield
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2
(506.80 KB, application/zip)
2014-06-03 19:58 PDT
,
Build Bot
no flags
Details
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-05-22 19:41:16 PDT
Created
attachment 231931
[details]
Patch
Myles C. Maxfield
Comment 2
2014-05-22 19:53:30 PDT
<
rdar://problem/16433531
>
Darin Adler
Comment 3
2014-05-26 09:18:39 PDT
Comment on
attachment 231931
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231931&action=review
> Source/WebCore/ChangeLog:24 > + RenderListMarker and RenderMenuList are subclasses of RenderBox, but the > + function that properly creates a TextRun is in RenderBlock. Rather than > + call functions in a sibling class, this patch moves this construction > + function from RenderBlock to RenderBox, the shared base class. It also > + updates all the call sites of this function. This patch then modifies > + RenderListMarker and RenderMenuList to use this newly-moved construction > + function.
These are static member functions; it doesn’t matter what class they are in. I suggest separating the “move functions to RenderBox” from the rest of this patch; it makes the patch huge and is entirely mechanical. And in fact is unnecessary, but an OK thing to do either before or after the work.
Myles C. Maxfield
Comment 4
2014-05-27 13:13:49 PDT
Created
attachment 232149
[details]
Patch
Simon Fraser (smfr)
Comment 5
2014-05-27 13:15:59 PDT
Comment on
attachment 232149
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232149&action=review
> Source/WebCore/ChangeLog:3 > + SVG TextRuns do not always get RenderingContexts
Would be better for the title to describe the user-visible impact of the bug.
Myles C. Maxfield
Comment 6
2014-05-27 14:29:22 PDT
Comment on
attachment 232149
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232149&action=review
> Source/WebCore/rendering/RenderListMarker.cpp:-1850 > - int itemWidth = font.width(m_text);
Whoops, stupid mistake.
Myles C. Maxfield
Comment 7
2014-05-27 14:35:55 PDT
http://trac.webkit.org/changeset/169400
Myles C. Maxfield
Comment 8
2014-05-27 14:39:51 PDT
Addressed Simon's comment in
http://trac.webkit.org/changeset/169401
WebKit Commit Bot
Comment 9
2014-05-27 22:05:25 PDT
Re-opened since this is blocked by
bug 133338
Myles C. Maxfield
Comment 10
2014-06-03 17:39:17 PDT
Created
attachment 232453
[details]
Patch
Myles C. Maxfield
Comment 11
2014-06-03 17:40:53 PDT
Simon already reviewed most of this. The new pieces that need a review are the following files: PlatformLocale.h LocalizedDateCache.* LocaleMac.h RenderThemeIOS.mm
Myles C. Maxfield
Comment 12
2014-06-03 17:41:20 PDT
dino: You would probably be a good person to review this.
Myles C. Maxfield
Comment 13
2014-06-03 17:42:49 PDT
Also note that I don't have expected test results because the iOS testing infrastructure isn't operational right now. I thought I would post the patch anyway. I will add expected iOS test results once I am able. (I have verified that the fix works by stepping through code in a debugger)
Myles C. Maxfield
Comment 14
2014-06-03 18:52:10 PDT
Created
attachment 232458
[details]
Patch
Build Bot
Comment 15
2014-06-03 19:58:42 PDT
Comment on
attachment 232458
[details]
Patch
Attachment 232458
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5643460241522688
New failing tests: media/W3C/video/src/src_reflects_attribute_not_source_elements.html
Build Bot
Comment 16
2014-06-03 19:58:45 PDT
Created
attachment 232461
[details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Simon Fraser (smfr)
Comment 17
2014-06-03 21:37:58 PDT
Comment on
attachment 232458
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232458&action=review
> Source/WebCore/rendering/RenderThemeIOS.mm:573 > + float maximumWidth = font.isSVGFont() ? 0 : inputElement->locale().maximumWidthForDateType(dateType, font);
This deserves a FIXME comment referencing the bug you'll use to make things work with SVG Fonts.
> LayoutTests/ChangeLog:12 > + * platform/ios-sim/fonts/resources/graffiti.svg: Added. SVG font for above test.
Don't we already have an SVG font somewhere in LayoutTests?
Myles C. Maxfield
Comment 18
2014-06-04 13:20:14 PDT
Comment on
attachment 232458
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232458&action=review
>> Source/WebCore/rendering/RenderThemeIOS.mm:573 >> + float maximumWidth = font.isSVGFont() ? 0 : inputElement->locale().maximumWidthForDateType(dateType, font); > > This deserves a FIXME comment referencing the bug you'll use to make things work with SVG Fonts.
Done.
>> LayoutTests/ChangeLog:12 >> + * platform/ios-sim/fonts/resources/graffiti.svg: Added. SVG font for above test. > > Don't we already have an SVG font somewhere in LayoutTests?
We do, but it's in LayoutTests/svg/custom/resources/graffiti.svg, far away from platform/ios-sim.
Myles C. Maxfield
Comment 19
2014-06-04 13:23:17 PDT
http://trac.webkit.org/changeset/169591
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug